--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="logo.jpg">
     <title>ENERMOL - Energía Solar Sostenible</title>
 </head>
 <body>
@@ -77,7 +78,6 @@
             <h3>Residencia Familiar</h3>
             <p>Descubre cómo transformamos la energía en una residencia familiar, reduciendo costos y emisiones.</p>
         </div>
-
         <!-- Nuevos casos de estudio -->
         
         <div class="case-study">
@@ -156,17 +156,14 @@
         <div class="container">
             <h2>Proyectos Destacados</h2>
             <div class="project">
-                <img src="project1.jpg" alt="Proyecto 1">
                 <h3>Residencia Familiar</h3>
                 <p>Instalamos un sistema solar en una residencia familiar, reduciendo su huella de carbono y sus costos de energía.</p>
             </div>
             <div class="project">
-                <img src="project2.jpg" alt="Proyecto 2">
                 <h3>Edificio Comercial</h3>
                 <p>Energizamos un edificio comercial con paneles solares, demostrando nuestro compromiso con la sostenibilidad empresarial.</p>
             </div>
             <div class="project">
-                <img src="project3.jpg" alt="Proyecto 3">
                 <h3>Granja Solar</h3>
                 <p>Desarrollamos una granja solar que suministra energía limpia y renovable a la comunidad local.</p>
             </div>
@@ -189,7 +186,6 @@
         <div class="container">
             <h2>Lo que dicen nuestros clientes</h2>
             <div class="testimonial">
-                <img src="testimonial1.jpg" alt="Cliente 1">
                 <p>"ENERMOL hizo posible que mi hogar funcionara con energía solar. Estoy encantado con el ahorro en mis facturas de electricidad y su compromiso con la sostenibilidad."</p>
                 <cite>- Cliente Satisfecho</cite>
             </div>
